main.tf

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }
}
variable "a_key" {
  description = "aws access key"
  type        = string
}
variable "s_key" {
  description = "aws secret key"
  type        = string
}
# Configure the AWS Provider
provider "aws" {
  region     = "us-east-1"
  access_key = var.a_key
  secret_key = var.s_key
}

#GATEWAY
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}

#ROUTE TABLE
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0" #DEFAULT ROUTE, SENDS ALL TRAFFIC WHEREEVER THIS ROUTE
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prodroute"
  }
}

#VPC
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "production"
  }
}
variable "subnet_prefix" {
  description = " cidrblock for my subnet"
}

#SUBNET
resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        = var.subnet_prefix[0]
  availability_zone = "us-east-1a"
  tags = {
    Name = "prod-subnet"
  }
}
#Associate subnet with Route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}


#CREATE A SECURITY GROUP, in this case: allow ports 22, 443 80
resource "aws_security_group" "allow_web" {
  name        = "allow_webtraffic"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] #Can change to only our computer, but Im using 0* to allow all
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH" #Allows me to SSH the server, I'm using windows so I use Putty to change my main-key pem to ppk, and ssh into it
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # -1 means any protocol
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

#Network interface -- Creating a network interface with an IP in the subnet that was created earlier
resource "aws_network_interface" "web-server-ni" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

  # attachment {
  #  instance     = aws_instance.test.id
  #   device_index = 1
  # }
}

#Assign an elastic IP to the network interface , requires internet gateway to be deployed first hence depends on flag
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-ni.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}
#Short command to extract the public IP generated by the elastic IP, outputs will be shown when I perform a terraform apply or terraform refresh
#create more of these outputs to extract whatever you want
output "server_public_ip" {
  value = aws_eip.one.public_ip
}

#AUTOSCALING GROUP -- TESTING WITH IAMROLE
data "aws_iam_policy_document" "greiff_agent" {
  statement {
    actions = ["sts:AssumeRole"]

    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "greiff_agent" {
  name               = "greiff-agent"
  path              = "/system/"
  assume_role_policy = data.aws_iam_policy_document.greiff_agent.json
}


resource "aws_iam_role_policy_attachment" "greiff_agent" {
  role       = "aws_iam_role.greiff_agent.name"
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
}
resource "aws_iam_instance_profile" "greiff_agent" {
  name = "greiff-agent"
  role = aws_iam_role.greiff_agent.name
}

#esource "aws_launch_configuration" "ecs_launch_config" {
#   image_id             = "ami-094d4d00fd7462815"
#   iam_instance_profile = aws_iam_instance_profile.ecs_agent.name
#   security_groups      = [aws_security_group.ecs_sg.id]
#   user_data            = "#!/bin/bash\necho ECS_CLUSTER=my-cluster >> /etc/ecs/ecs.config"
#   instance_type        = "t2.micro"
#
#
#esource "aws_autoscaling_group" "failure_analysis_ecs_asg" {
#   name                      = "asg"
#   vpc_zone_identifier       = [aws_subnet.subnet-1.id]
#   launch_configuration      = aws_launch_configuration.ecs_launch_config.name
#
#   desired_capacity          = 2
#   min_size                  = 1
#   max_size                  = 10
#   health_check_grace_period = 300
#   health_check_type         = "EC2"
#

#UBUNTU server where I install & enable apache2
resource "aws_instance" "web-server-instance" {
  ami               = "ami-0dba2cb6798deb6d8"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a" #SAME AS THE SUBNET, amazon picks random zone if we dont hardcode it, so if we dont hardcore in both, they might not work together
  key_name          = "main-key"

  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.web-server-ni.id
  }
  user_data = <<-EOF
    #!/bin/bash
    sudo apt update -y
    sudo apt install apache2 -y
    sudo systemctl start apache2
    sudo bash -c 'echo my first web server > /var/www/html/index.html'
    EOF 
  #tells terraform we're done writing commands to my ubuntuserver
  tags = {
    Name = "web.server"
  }
}
